# Weft

./: .env.example  .gitignore  README.md  STYLE_BIBLE.md  STYLE_GUIDE.md  WORKFLOW.html  install.sh  pyproject.toml  run.sh  uninstall.sh
.agents/skills/animation-render/: SKILL.md
.agents/skills/conti-qa/: SKILL.md
.agents/skills/script-to-conti/: SKILL.md
.agents/skills/visual-qa/: SKILL.md
.claude/skills/conti-qa/: SKILL.md
.claude/skills/script-to-conti/: SKILL.md
.claude/skills/visual-qa/: SKILL.md
STYLE_GUIDE_assets/: 3blue1brown.STYLE.txt  README.md  _clay_style.txt  blueprint.STYLE.txt  cel-anime.STYLE.txt  papercut.STYLE.txt  risograph.STYLE.txt  watercolor.STYLE.txt
dryrun/: SCRIPT.md
example/: CARDS.json  CONTI.md  test_dryrun.py
setting_examples/: README.md  low.WEFT_SETTINGS.txt  standard.WEFT_SETTINGS.txt  youtube_4k_high.WEFT_SETTINGS.txt  youtube_high.WEFT_SETTINGS.txt
tests/: test_bgm.py  test_cli.py  test_dryrun.py  test_parser_edges.py  test_providers.py
weft/: __init__.py  animation.py  assets.py  cli.py  compiler.py  markdown.py  parser.py  settings.py  timecode.py  validate.py  writer.py
weft/exporters/: __init__.py  capcut_draft.py  fcpxml.py  ffmpeg_render.py  mp4_ffmpeg.py
weft/picker/: __init__.py  picker.html  server.py
weft/providers/: __init__.py  comfyui_image.py  env.py  gemini_image.py  openai_image.py  registry.py  typecast_tts.py
