[project]
name = "weft"
version = "0.1.0"
description = "Dual-track workflow for long-form explainer video production"
authors = [{ name = "Minwoo Park" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "openai",
  "Pillow",
]

[tool.setuptools]
packages = ["weft", "weft.providers", "weft.exporters", "weft.picker"]

[tool.setuptools.package-data]
"weft.picker" = ["picker.html"]
