[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weft"
version = "0.1.0"
description = "Dual-track workflow for long-form explainer video production"
authors = [{ name = "Minwoo Park" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0,<3",
  "Pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
weft = "weft.cli:main"

[tool.setuptools]
packages = ["weft", "weft.providers", "weft.exporters", "weft.picker"]

[tool.setuptools.package-data]
"weft.picker" = ["picker.html"]
